# bluespec-lsp

./: LICENSE  README.md  README.zh-CN.md
bsv-language-server/: Cargo.toml  README.md  README.zh-CN.md  build.rs  package-lock.json  package.json
bsv-language-server/client/: extension.ts  tsconfig.json
bsv-language-server/src/: errors.rs  grammar.json  lib.rs  main.rs  node-types.json  parser.rs  server.rs  symbols.rs  utils.rs
bsv-language-server/syntaxes/: bsv.tmLanguage.json
bsv-language-server/tests/test_bsv_files/: broken.bsv  simple.bsv  test.bsv
tree-sitter-bsv/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  README.zh-CN.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-bsv/bindings/c/: tree-sitter-bsv.pc.in
tree-sitter-bsv/bindings/go/: binding.go  binding_test.go
tree-sitter-bsv/bindings/node/: binding.cc
tree-sitter-bsv/bindings/python/tests/: test_binding.py
tree-sitter-bsv/bindings/python/tree_sitter_bsv/: __init__.py
tree-sitter-bsv/bindings/rust/: build.rs  lib.rs
tree-sitter-bsv/bindings/swift/TreeSitterBsvTests/: TreeSitterBsvTests.swift
tree-sitter-bsv/test/: smoke.bsv
