[package]
name = "bsv-language-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20.0"
tower-lsp-macros = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
tree-sitter = "0.20.10"
walkdir = "2.4"
regex = "1.10"
dashmap = "5.5"
lru = "0.7"
crossbeam = "0.8"
parking_lot = "0.12"
tokio = { version = "1.50", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
once_cell = "1.19"
lsp-types = "0.94"
url = "2.5"

[build-dependencies]
cc = "1.0"
